[gd_scene load_steps=2 format=3 uid="uid://diu576ijbb8gw"]

[ext_resource type="Script" path="res://scenes/menu/option_menu/save_data_control.gd" id="1_gn3i3"]

[node name="SaveDataControl" type="HBoxContainer"]
script = ExtResource("1_gn3i3")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Reset Save"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "1"

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "2"

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "3
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
